zoom out logo in mobile to prevent overlap (and font update) (#6)

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,13 @@
 @font-face {
-  font-family: "BebasNeue";
-  src: url("/fonts/BebasNeue-Regular.ttf");
-  font-style: normal;
+  font-family: 'BebasNeue';
+  src: url('/fonts/BebasNeue-Regular.eot');
+  src: url('/fonts/BebasNeue-Regular.eot?#iefix') format('embedded-opentype'),
+      url('/fonts/BebasNeue-Regular.woff2') format('woff2'),
+      url('/fonts/BebasNeue-Regular.woff') format('woff'),
+      url('/fonts/BebasNeue-Regular.ttf') format('truetype'),
+      url('/fonts/BebasNeue-Regular.svg#BebasNeue-Regular') format('svg');
   font-weight: 400;
+  font-style: normal;
   font-display: block;
 }
 html {
